# dump_psql_roles_grants

./: .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  Dockerfile  README.Docker.md  README.md  compose.yaml  config.yaml  homebrew_formula.rb.j2  pyproject.toml  requirements.txt  requirements_common.txt
.github/workflows/: bump.yml  pr.yml  release.yml
dump_psql_roles_grants/: __main__.py  __version__.py  classes.py  cli.py  commands.py  config.py  get_data.py  table.py
src/: app.py  classes.py  cli.py  commands.py  config.py  get_data.py  table.py
