[tool.poetry]
name = "dump-psql-roles-grants"
version = "0.3.1"
description = "Dump Postgres Roles and Grants"
authors = ["Roman Geraskin <roman.n.geraskin@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rgeraskin/dump_psql_roles_grants"
keywords = ["postgres", "psql", "roles", "grants", "dump"]

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"
pytablewriter = "^1.2.0"
click = "^8.1.7"
rich = "^13.7.1"
psycopg = "^3.1.18"
psycopg-binary = {version = "^3.1.18", optional = true}
psycopg-infdate = "^1.0.3"
PyYAML = "^6.0.1"

[tool.poetry.extras]
binary = ["psycopg-binary"]

[tool.poetry.scripts]
dump_psql_roles_grants = "dump_psql_roles_grants.cli:cli"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
version_files = [
    "dump_psql_roles_grants/__version__.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
